fix: layout issue

--- a/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
+++ b/src/components/ApplicationGroup/Details/EnvironmentOverview/envOverview.scss
@@ -10,7 +10,7 @@
 
         .app-deployments-info-header,
         .app-deployments-info-row {
-            grid-template-columns: 268px 130px 200px 1fr;
+            grid-template-columns: 268px 130px 335px 1fr;
             column-gap: 16px;
             grid-auto-rows: 36px;
             transition: grid-template-columns 0.4s ease-out;
@@ -20,7 +20,7 @@
             }
 
             .app-deployment-info-row-leftsection {
-                grid-template-columns: 20px 16px 200px;
+                grid-template-columns: 20px 16px 200px 1fr;
                 column-gap: 16px;
             }
         }
